# camera-app

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  codecov.yml
.github/: mergify.yml
.github/workflows/: codecov.yml  coverage.yml  workflow.yml
assets/: camera.qrc
include/api/controllers/: cameraController.h
include/api/models/: camera.h
public/: main.qrc
public/views/: main.qml
src/: main.cpp
src/api/controllers/: cameraController.cpp
src/api/models/: camera.cpp
src/app/: main.cpp
src/views/: camera.qml  camera.ui
views/: camera.qml
